# datorcloud

./: .env  .env.example  .env.prod  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  start-duckdb.sh  workspace.yaml
.github/workflows/: test.yml
dashboard/: datasets.json  ui_experiment_card_editor.html  ui_surgical_dashboard.html
data/: hotel-booking-demand-metadata.json
data/4dor-dataset/experiment-1/annotations/: 000031.json
data/4dor-dataset/experiment-1/camera01/depthimage/: camera01_depthimage-000031.tiff
data/4dor-dataset/experiment-1/camera04/depthimage/: camera04_depthimage-000061.tiff
data/4dor-dataset/experiment-1/camera05/depthimage/: camera05_depthimage-000061.tiff
data/4dor-dataset/experiment-1/camera06/depthimage/: camera06_depthimage-000061.tiff
data/4dor-dataset/experiment-1/cameras/: camera05.json  camera06.json
data/4dor-dataset/experiment-1/depthimage/camera05/: camera05_depthimage-000031.tiff
data/4dor-dataset/experiment-2/annotations/: 000061.json
data/4dor-dataset/experiment-2/camera02/depthimage/: camera02_depthimage-000061.tiff
data/4dor-dataset/experiment-2/cameras/: camera01.json  camera02.json  camera03.json  camera04.json
data/orx-dataset/experiment-1/annotations/: 000500.json  002000.json
data/orx-dataset/experiment-1/cameras/: atracsys_3314649369913484584.json  kinect_000385500312.json  kinect_000389100312.json  kinect_000426200312.json
data/orx-dataset/experiment-1/depthimage/: kinect_000426200312_depthimage-002000.tiff
data/orx-experiments/experiment-1/kinect_000385500312/depthimage/: kinect_000385500312_depthimage-000500.tiff  kinect_000385500312_depthimage-002000.tiff
data/orx-experiments/experiment-1/kinect_000389100312/depthimage/: kinect_000389100312_depthimage-000500.tiff  (+1 more)
dataspaces/retrieved_data/: .gitkeep
datorcloud/: __init__.py  cli.py  snapshots.py
datorcloud/components/: __init__.py  hf_publisher_component.py  metadata_generator_component.py  metadata_storage_component.py  minio_component.py  parquet_catalog_component.py  query_component.py  retrieval_component.py
datorcloud/core/: __init__.py  datorcloud.py  datorcloud_orchestrator.py
datorcloud/dagster/: __init__.py  component_assets.py  evaluation_sensor.py
datorcloud/schemas/: __init__.py  l1_l4.sql  migrations.py
datorcloud/templates/: __init__.py  catalog_layout.md  dataset_card.md.template
docker/duckdb/: Dockerfile
docs/: README.md  datamodel.puml  hf_layout.md  snapshots.md
docs/01_overview/: overview.md
docs/02_installation/: installing_core_data_platform.md
docs/03_components/: architecture.md
docs/04_user_guide/: cli.md  dagster.md  python_api.md  quickstart.md  tutorial_4dor.md  tutorial_dagster.md
docs/05_contributing/: contributing.md
docs/stylesheets/: extra.css
examples/: component_architecture_example.py  dagster_workflow.py  datorcloud_basic_usage.py  datorcloud_dagster_workflow.py
examples/dagster_quickstart/: README.md  definitions.py  workspace.yaml
examples/dagster_quickstart/components/: __init__.py
examples/dagster_quickstart/jobs/: __init__.py  data_processing_job.py
src/: minio_duckdb_query.py  test-duckdb_python_api.py  upload_to_minio.py
src/dagster_quickstart/: __init__.py  definitions.py  workspace.yaml
src/dagster_quickstart/components/: data_processing.py
src/dagster_quickstart/jobs/: data_processing_job.py
src/orx-surghub/: README.md  duckdb_database_creation.py  metadata-generator.py  query_metadata_duckdb.py  retrieval_object_data.py  upload_metadata_to_minio.py  upload_object_to_minio.py
src/preprocessing/: refactor_folder_data_spec021.py
tests/: conftest.py  test_cli.py  test_dagster_assets.py  test_eval_set_join.py  test_hf_publisher.py  test_metadata_generator_component.py  test_metadata_storage_component.py  test_minio_component.py  test_orchestrator.py  test_parquet_catalog_component.py  test_query_component.py  test_retrieval_component.py  test_schema_migration.py  test_snapshots.py
tests/integration/: test_01_catalog.py
(+7 files in other folders)
